deploy/kubernetes/manifests/29-front-end-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: http
  name: demo-app
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /demo-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: front-end
            port: 
              number: 80
---
